sample config file without values

--- a/tweeter-data-crawl/tweeter-data-crawl/tweeter-data-crawl.csproj
+++ b/tweeter-data-crawl/tweeter-data-crawl/tweeter-data-crawl.csproj
@@ -12,6 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Data\appsettings.example.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Data\appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
