code format to get tweets from main user and fixed since_id param

--- a/tweeter-data-crawl/tweeter-data-crawl/Data/appsettings.example.json
+++ b/tweeter-data-crawl/tweeter-data-crawl/Data/appsettings.example.json
@@ -1,7 +1,8 @@
 {
   "Consumer": {
-    "Key": "---",
-    "Secret": "----"
+    "Key": "-----",
+    "Secret": "-----"
   },
-  "AuthorizeToken": "---"
+  "AuthorizeToken": "-----",
+  "MainUserName": "-----"
 }
