save mainuserid in appsettings

--- a/tweeter-data-crawl/tweeter-data-crawl/Data/appsettings.example.json
+++ b/tweeter-data-crawl/tweeter-data-crawl/Data/appsettings.example.json
@@ -4,5 +4,6 @@
     "Secret": "-----"
   },
   "AuthorizeToken": "-----",
-  "MainUserName": "-----"
+  "MainUserName": "-----",
+  "MainUserId": "-----"
 }
